# states-engine-sample-platformer

./: CMakeLists.txt  README.md
Resources/knight/: knight.autosave.scml
Source/: CMakeLists.txt  IngameCameraUpdater.cpp  IngameCameraUpdater.hpp  IngameEventsHandler.cpp  IngameEventsHandler.hpp  IngameHud.cpp  IngameHud.hpp  IngameHudListener.cpp  IngameHudListener.hpp  IngamePlayerController.hpp  InitIngameState.cpp  InitMainMenu.cpp  InitMainMenu.hpp  MenuUiListener.cpp  Utils.cpp  Utils.hpp  WarriorAi.cpp
Source/Engine/: UnitBasis.hpp
Source/FrontendExecutor/: Urho3DApplication.cpp  Urho3DApplication.hpp
Source/FrontentCXX/: InitIngameState.hpp  MenuUi.cpp
sources/: CMakeLists.txt
sources/Engine/: Constants.hpp  UnitBasis.cpp
sources/FrontendCXX/: CMakeLists.txt  IngameHud.cpp  IngameHud.hpp  IngameHudListener.cpp  IngameHudListener.hpp  InitIngameState.cpp  InitIngameState.hpp  InitMainMenu.cpp  InitMainMenu.hpp  MenuUi.cpp  MenuUi.hpp  MenuUiListener.cpp  MenuUiListener.hpp
sources/FrontendExecutor/: CMakeLists.txt  Urho3DApplication.cpp
sources/FrontentCXX/: MenuUi.hpp  MenuUiListener.hpp
sources/GameEngine/: CMakeLists.txt  CameraUpdater.cpp  CameraUpdater.hpp  Constants.hpp  EventsHandler.cpp  EventsHandler.hpp  IngameCameraUpdater.cpp  IngameCameraUpdater.hpp  IngameEventsHandler.cpp  IngameEventsHandler.hpp  IngamePlayerController.cpp  IngamePlayerController.hpp  PlayerController.cpp  PlayerController.hpp  UnitBasis.cpp  UnitBasis.hpp  UnitInterface.cpp  UnitInterface.hpp  Utils.cpp  Utils.hpp  WarriorAi.cpp  WarriorAi.hpp
vendors/Resources/: KOForc_DeletedBackground.psd  KnightOfFinlandiaDeletedBackground.psd
vendors/Resources/coin/: coin.scml
vendors/Resources/orc/: orc.autosave.scml  orc.scml
