include_directories (${STATES_ENGINE_SDK}/include)
set (TARGET_NAME StatesEngineSamples_Platformer)
define_source_files ()
setup_main_executable ()
target_link_libraries (StatesEngineSamples_Platformer StatesEngine)

if (INSTALL_GAME)
    install (FILES ${CMAKE_BINARY_DIR}/bin/StatesEngineSamples_Platformer${CMAKE_EXECUTABLE_SUFFIX} DESTINATION ${CMAKE_INSTALL_PREFIX})
    if (EXISTS ${CMAKE_BINARY_DIR}/bin/Urho3D${CMAKE_SHARED_LIBRARY_SUFFIX})
        install (FILES ${CMAKE_BINARY_DIR}/bin/Urho3D${CMAKE_SHARED_LIBRARY_SUFFIX} DESTINATION ${CMAKE_INSTALL_PREFIX})
    endif ()
    if (URHO3D_PACKAGING)
        install (FILES ${CMAKE_BINARY_DIR}/bin/CoreData.pak ${CMAKE_BINARY_DIR}/bin/Data.pak DESTINATION ${CMAKE_INSTALL_PREFIX})
    else ()
        install (DIRECTORY ${CMAKE_BINARY_DIR}/bin/CoreData/ DESTINATION ${CMAKE_INSTALL_PREFIX}/CoreData)
        install (DIRECTORY ${CMAKE_BINARY_DIR}/bin/Data/ DESTINATION ${CMAKE_INSTALL_PREFIX}/Data)
    endif ()
endif ()
