set (TARGET_NAME SamplePlatformer)
set (Headers Urho3DApplication.hpp)
set (Implementations Urho3DApplication.cpp)
set (SOURCE_FILES ${Headers} ${Implementations})
setup_main_executable ()
target_link_libraries (SamplePlatformer StatesEngine)
target_link_libraries (SamplePlatformer FrontendCXX)

if (INSTALL_GAME)
    install (FILES ${CMAKE_BINARY_DIR}/bin/SamplePlatformer${CMAKE_EXECUTABLE_SUFFIX} DESTINATION ${CMAKE_INSTALL_PREFIX})
    if (EXISTS ${CMAKE_BINARY_DIR}/bin/Urho3D${CMAKE_SHARED_LIBRARY_SUFFIX})
        install (FILES ${CMAKE_BINARY_DIR}/bin/Urho3D${CMAKE_SHARED_LIBRARY_SUFFIX} DESTINATION ${CMAKE_INSTALL_PREFIX})
    endif ()
    if (URHO3D_PACKAGING)
        install (FILES ${CMAKE_BINARY_DIR}/bin/CoreData.pak ${CMAKE_BINARY_DIR}/bin/Data.pak DESTINATION ${CMAKE_INSTALL_PREFIX})
    else ()
        install (DIRECTORY ${CMAKE_BINARY_DIR}/bin/CoreData/ DESTINATION ${CMAKE_INSTALL_PREFIX}/CoreData)
        install (DIRECTORY ${CMAKE_BINARY_DIR}/bin/Data/ DESTINATION ${CMAKE_INSTALL_PREFIX}/Data)
    endif ()
endif ()